stealth (1.47.1)
    
  * Defined the --max-get-size option to restrict the size of files
    that can be received from a target system. By default 10M.

  * As the MD5 hash is no longer considered to be cryptographically
    secure, stealth users should now use an alternative way to compute
    hash-values. It is suggested to switch to SHA1 hash computations. All
    stealth documentation was updated accordingly.

stealth (1.46.1)

  * Introduced sub-sub-version numbers for minor changes
 
  * The `build' script no longer automatically strips the binary

stealth (1.46)

  * Stealth's icmake scripts adapted to work with icmake > V 7.00 as well.

  * Random interval based activation time clarified and implementation
    slightly changed. Man-page and manual changed accordingly

    Examples now have `find' options (like -xdev) at their proper places.

  * Provded the stealthmail script with a sorting filter, filtering only the
    ADDED, MODIFIED and DELETED messages from mail generated by stealth.

  * Version distribution changed. Latest version now expected in VERSION

stealth (1.45)

  * The previously used scripts below make/ are obsolete and were removed from
    this and future distributions. Icmake should be used instead, for which a
    top-level script (build) and support scripts in the ./icmake/ directory
    are available. Icmake is available on a great many architectures. See the
    file INSTALL (and INSTALL.im, replacing the previously used INSTALL.cf)
    for further details.

  * All plain `unsigned' variables were changed to `size_t'

stealth (1.44) unstable; urgency=low

  * License changed to the GNU GENERAL PUBLIC LICENSE. See the file
    `copyright'. 

  * Introduced George Danchev <danchev@spnet.net> as uploader

  * From now on this file will contain the `upstream' changes. The Debian
    related changes are in changelog.Debian.gz

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 19 Jul 2006 12:57:17 +0200
