@@ -1,2 +1,2 @@
-#define VERSION "1.47.1"
+#define VERSION "1.47.2"
 #define YEARS   "2005-2008"
